--- a/src/components/App.css
+++ b/src/components/App.css
@@ -538,7 +538,7 @@ textarea {
 }
 
 .right-nav * {
-  font-size: clamp(1rem, 2rem, 18px);
+  font-size: clamp(0.75rem, 14px, 18px);
 }
 
 .saving-container {
@@ -781,7 +781,7 @@ section {
 
 .lottie-down{
   width: 100%;
-  max-width: 45%;
+  max-width: 40%;
 }
 
 /* Testimonials Section */
@@ -888,7 +888,7 @@ section {
 .loading-logo {
   font-weight: 900;
   font-style: normal;
-  font-size: xx-large;
+  font-size: 100px;
 }
 
 .loading-text {
