--- a/src/templates/CoralTemplate.css
+++ b/src/templates/CoralTemplate.css
@@ -70,6 +70,13 @@
   margin: 0;
 }
 
+.coral-award {
+  padding-top: 10pt;
+  padding-bottom: 0pt;
+  line-height: 1.3;
+  margin: 0;
+}
+
 .coral-experience,
 .coral-education {
   margin-bottom: 10pt;
