--- a/src/templates/SwissTemplate.css
+++ b/src/templates/SwissTemplate.css
@@ -147,6 +147,15 @@
   margin: 0;
 }
 
+.swiss-award {
+  color: #000000;
+  font-size: 10pt;
+  padding-top: 6pt;
+  padding-bottom: 0pt;
+  line-height: 1.15;
+  margin: 0;
+}
+
 .swiss-experience,
 .swiss-education {
   margin-bottom: 16pt;
