Adjusted the position of the preview button to the right hand side on smaller screens

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -645,8 +645,9 @@ textarea {
 .preview-resume-button-container {
   position: fixed;
   bottom: 50px;
-  left: 20px;
+  right: 20px;
   display: none;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 1rem;
